<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_border">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Letter_imageView"
                android:src="@drawable/team_logo"
                android:contentDescription="@string/letterimage"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/teamName"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/Letter_imageView"
                android:layout_toEndOf="@+id/Letter_imageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tags"
                android:id="@+id/textView2"
                android:layout_below="@+id/textView"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/TeamName"
                android:id="@+id/TeamName_textView"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_above="@+id/textView2"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView"
                android:textColor="#333333" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamLeader"
                android:id="@+id/textView3"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_below="@+id/Letter_imageView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zishran Julbert"
                android:id="@+id/teamLead_textVIew"
                android:layout_marginLeft="5dp"
                android:layout_alignTop="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:layout_alignRight="@+id/TeamName_textView"
                android:layout_alignEnd="@+id/TeamName_textView"
                android:textColor="#333333" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backEnd"
                android:id="@+id/textView4"
                android:layout_below="@+id/textView3"
                android:layout_toLeftOf="@+id/teamLead_textVIew"
                android:layout_toStartOf="@+id/teamLead_textVIew" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zishran Julbert"
                android:id="@+id/backEnd_textView"
                android:textColor="#333333"
                android:layout_below="@+id/teamLead_textVIew"
                android:layout_alignLeft="@+id/teamLead_textVIew"
                android:layout_alignStart="@+id/teamLead_textVIew" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frontend"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView4"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zishran Julbert"
                android:id="@+id/frontEnd_textView"
                android:textColor="#333333"
                android:layout_below="@+id/backEnd_textView"
                android:layout_alignLeft="@+id/backEnd_textView"
                android:layout_alignStart="@+id/backEnd_textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pitcher"
                android:id="@+id/textView6"
                android:layout_below="@+id/textView5"
                android:layout_alignRight="@+id/textView4"
                android:layout_alignEnd="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:id="@+id/pitcher_textView"
                android:textColor="#333333"
                android:layout_below="@+id/frontEnd_textView"
                android:layout_alignLeft="@+id/frontEnd_textView"
                android:layout_alignStart="@+id/frontEnd_textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designer"
                android:id="@+id/textView7"
                android:layout_below="@+id/textView6"
                android:layout_alignRight="@+id/textView5"
                android:layout_alignEnd="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:id="@+id/designer_textView"
                android:textColor="#333333"
                android:layout_alignTop="@+id/textView7"
                android:layout_alignLeft="@+id/pitcher_textView"
                android:layout_alignStart="@+id/pitcher_textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joinTeam"
                android:id="@+id/textView8"
                android:layout_below="@+id/pitcher_textView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:textColor="#3498db" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>