<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_border">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Letter_imageView2"
                android:src="@drawable/team_logo"
                android:contentDescription="@string/letterimage"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/teamName"
                android:id="@+id/textViewTeamName"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/Letter_imageView2"
                android:layout_toEndOf="@+id/Letter_imageView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/textView9"
                android:layout_alignTop="@+id/textViewTeamName"
                android:layout_toRightOf="@+id/textViewTeamName"
                android:layout_toEndOf="@+id/textViewTeamName"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="&lt;tags>"
                android:id="@+id/textView19"
                android:layout_below="@+id/textViewTeamName"
                android:layout_alignLeft="@+id/textViewTeamName"
                android:layout_alignStart="@+id/textViewTeamName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/applyRole"
                android:id="@+id/textView21"
                android:layout_marginTop="7dp"
                android:layout_below="@+id/Letter_imageView2"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_below="@+id/textView21"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>