<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        tools:context="com.reginalddc.teamderapp.CreateTeamFragment.CreateTeam2Fragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Create Team"
                    android:id="@+id/textView5"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="22dp"
                    android:layout_marginStart="22dp"
                    android:textColor="#2ECC71"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/teamLeader"
                    android:textColor="@color/gray"
                    android:id="@+id/textView9"
                    android:layout_marginBottom="2dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Zishran Julbert Garces"
                    android:id="@+id/name"
                    android:textColor="@color/black"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/textView9"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/member1"
                    android:layout_marginBottom="0dp"
                    android:id="@+id/textView10"
                    android:textColor="@color/gray"
                    android:layout_below="@+id/textView9"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/role1"
                    android:id="@+id/textView11"
                    android:textColor="@color/gray"
                    android:textSize="18dp"
                    android:layout_below="@+id/textView10"
                    android:layout_alignLeft="@+id/textView10"
                    android:layout_alignStart="@+id/textView10"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/spinner"
                    android:layout_alignBottom="@+id/textView11"
                    android:layout_toRightOf="@+id/textView11"
                    android:layout_alignRight="@+id/name"
                    android:layout_alignEnd="@+id/name"
                    android:background="@drawable/textarea_border"
                    android:paddingLeft="10dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/member2"
                    android:layout_marginBottom="0dp"
                    android:id="@+id/textView12"
                    android:textColor="@color/gray"
                    android:layout_below="@+id/textView11"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Role 2: "
                    android:id="@+id/textView13"
                    android:textColor="@color/gray"
                    android:textSize="18dp"
                    android:layout_below="@+id/textView12"
                    android:layout_alignLeft="@+id/textView12"
                    android:layout_alignStart="@+id/textView12"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/spinner2"
                    android:layout_alignBottom="@+id/textView13"
                    android:layout_toRightOf="@+id/textView13"
                    android:layout_alignRight="@+id/name"
                    android:layout_alignEnd="@+id/name"
                    android:background="@drawable/textarea_border"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Member 3: "
                    android:layout_marginBottom="0dp"
                    android:id="@+id/textView14"
                    android:textColor="@color/gray"
                    android:layout_below="@+id/textView13"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Role 3: "
                    android:id="@+id/textView15"
                    android:textColor="@color/gray"
                    android:textSize="18dp"
                    android:layout_below="@+id/textView14"
                    android:layout_alignLeft="@+id/textView14"
                    android:layout_alignStart="@+id/textView14"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/spinner3"
                    android:layout_alignBottom="@+id/textView15"
                    android:layout_toRightOf="@+id/textView15"
                    android:layout_alignRight="@+id/name"
                    android:layout_alignEnd="@+id/name"
                    android:background="@drawable/textarea_border"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Member 4: "
                    android:layout_marginBottom="0dp"
                    android:id="@+id/textView16"
                    android:textColor="@color/gray"
                    android:layout_below="@+id/textView15"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Role 4: "
                    android:id="@+id/textView17"
                    android:textColor="@color/gray"
                    android:textSize="18dp"
                    android:layout_below="@+id/textView16"
                    android:layout_alignLeft="@+id/textView16"
                    android:layout_alignStart="@+id/textView16"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/spinner4"
                    android:layout_alignBottom="@+id/textView17"
                    android:layout_toRightOf="@+id/textView17"
                    android:layout_alignRight="@+id/name"
                    android:layout_alignEnd="@+id/name"
                    android:background="@drawable/textarea_border"
                    android:paddingLeft="10dp"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/next_button"
                    android:textColor="@color/white"
                    android:text="@string/createTeam"
                    android:id="@+id/button2"
                    android:layout_below="@+id/textView17"
                    android:layout_alignLeft="@+id/textView17"
                    android:layout_alignStart="@+id/textView17"
                    android:layout_alignRight="@+id/spinner4"
                    android:layout_alignEnd="@+id/spinner4"
                    android:textStyle="bold" />


            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>